[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
const-zero = "0.1.0"
crossbeam-channel = "0.5.4"
libc = "0.2"
once_cell = "1.10.0"

[profile.dev]
opt-level = 2
