[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
const-zero = "0.1.0"
crossbeam-channel = "0.5.4"
epoll-rs = "0.2.1"
ipnetwork = "0.17.0"
libc = "0.2"
libslirp = {version = "4.3.0", features = ["ipnetwork"]}
log = "0.4.16"
once_cell = "1.10.0"

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2
